--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
       <version>3.8.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>27.0-jre</version>
+    </dependency>
+
   </dependencies>
 
   <build>
