--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
       <version>27.0-jre</version>
     </dependency>
 
+    <!--工具包-->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.8</version>
+    </dependency>
+
   </dependencies>
 
   <build>
